Install and import SARSA utils in exercise3.ipynb

--- a/notebooks/exercise2.ipynb
+++ b/notebooks/exercise2.ipynb
@@ -14,7 +14,7 @@
     "The goal of this exercise is to generate a Self Organizing Map based on the recorded robot positions of Exercise 1.\n",
     "If you didn't complete Exercise 1, clone and launch the experiment *Exercise 2: Transform robot positions ... (SOM)* of the [Neurorobotics platform](http://148.187.97.48/#/esv-private) to generate the file *robot_positions.csv* \n",
     "\n",
-    "**Note: Exercise 2's experiment contains the solution of Exercise 1.**"
+    "**Note that Exercise 2's experiment contains the solution of Exercise 1.**"
    ]
   },
   {
@@ -36,25 +36,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your script will be saved to the file *SOM_<Surname>_<Name>.py* for its submition via the command: \n",
+    "Your script will be saved to the file `SOM_<Surname>_<Name>.py` for its submition via the command: \n",
     "    %%writefile SOM_Surname_Name.py\n",
     "    \n",
-    "Please, put your Surname and Name as the name of file to ensure autorecognition of your personality\n",
-    "Once you are ready to submit your SOM implementation, you need to uncomment the first line so as to create your file in the jupyter notebook environment.\n",
-    "\n",
-    "Remarks:\n",
-    "1) The map size shouldn't exceed 10x10. It's not reasonable to use very huge map for our simple environment.\n",
-    "2) The theory says the 1 minute of simulation is totally enough for SOM training in our experiment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Your script will be saved to the file *SOM_<Surname>_<Name>.py* for its submition via the command: \n",
-    "    %%writefile SOM_Surname_Name.py\n",
-    "    \n",
-    "Please, put your Surname and Name as the name of file to ensure autorecognition of your personality\n",
+    "Please, replace `<Surname>` and `<Name>` in the name of the file to ensure autorecognition of your personality\n",
     "Once you are ready to submit your SOM implementation, you need to uncomment the first line so as to create your file in the jupyter notebook environment.\n",
     "\n",
     "Remarks:\n",
@@ -68,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install SOM and SARSA utils\n",
+    "# Install SOM utils\n",
     "! pip install --user --force-reinstall git+https://github.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics-utils#egg=epflx_robox_nrp_utils"
    ]
   },
@@ -230,7 +215,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C. Evaluation of result (for non-graduated students) "
+    "## C. Evaluation of result (for non-graduated students) \n",
+    "---------------------------------------------------------------------"
    ]
   },
   {
