--- a/notebooks/exercise3.ipynb
+++ b/notebooks/exercise3.ipynb
@@ -4,14 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3: Navigate the robot between any two points of its environment"
+    "# Exercise 3: Navigate the robot between any two points of its environment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SARSA data preparation: generate your maze based on your SOM data"
+    "The goal of this exercise is ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A. SARSA data preparation: generate your maze based on the SOM data\n",
+    "----------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In this section, we want to ..."
    ]
   },
   {
@@ -40,6 +57,16 @@
    "metadata": {},
    "source": [
     "Description, general comments, so on..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install SOM and SARSA utils\n",
+    "! pip install --user --force-reinstall git+https://github.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics-utils#egg=epflx_robox_nrp_utils"
    ]
   },
   {
@@ -404,7 +431,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation (SARSA training)"
+    "## B. SARSA training\n",
+    "---------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In this section, you will ..."
    ]
   },
   {
@@ -487,7 +524,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SARSA evaluation "
+    "## C. SARSA evaluation\n",
+    "-------------------------------"
    ]
   },
   {
@@ -509,7 +547,7 @@
     }
    ],
    "source": [
-    "from SARSA_evaluation import SARSA_evaluation\n",
+    "from epflx_robox_nrp_utils.SARSA.SARSA_evaluation import SARSA_evaluation\n",
     "sarsaev = SARSA_evaluation()\n",
     "sarsaev.run_evaluation(0)  # run_evaluation(N_tests)"
    ]
@@ -518,7 +556,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate test for NRP platform "
+    "## D. Generate test for NRP platform \n",
+    "----------------------------------------------"
    ]
   },
   {
@@ -547,7 +586,7 @@
     }
    ],
    "source": [
-    "from SARSA_evaluation import SARSA_evaluation\n",
+    "from epflx_robox_nrp_utils.SARSA.SARSA_evaluation import SARSA_evaluation\n",
     "sarsaev = SARSA_evaluation()\n",
     "sarsaev.test_generation() # test_generation(random or input yours [x,y])"
    ]
@@ -584,7 +623,7 @@
     }
    ],
    "source": [
-    "from SARSA_autograduation import SARSA_autograduation\n",
+    "from epflx_robox_nrp_utils.SARSA.SARSA_autograduation import SARSA_autograduation\n",
     "sarsaar = SARSA_autograduation()\n",
     "sarsaar.one_function_graduation('SARSA_Ihor_Kuras.py')"
    ]
@@ -605,7 +644,7 @@
     }
    ],
    "source": [
-    "from SARSA_autograduation import SARSA_autograduation\n",
+    "from epflx_robox_nrp_utils.SARSA.SARSA_autograduation import SARSA_autograduation\n",
     "sarsaar = SARSA_autograduation()\n",
     "sarsaar.all_functions_graduation()"
    ]
@@ -616,7 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SARSA_autograduation import SARSA_autograduation\n",
+    "from epflx_robox_nrp_utils.SARSA.SARSA_autograduation import SARSA_autograduation\n",
     "sarsaar = SARSA_autograduation()\n",
     "sarsaar.open_webpage()"
    ]
