Removes SARSA and SOM folders (moved to the utils repository)

--- a/notebooks/exercise1.ipynb
+++ b/notebooks/exercise1.ipynb
@@ -11,8 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The goal of this exercise is ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A. Launch the neurorobotics simulation of Exercise 1\n",
     "----------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section, you will ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install NRP's VirtualCoach\n",
+    "!pip install -i https://bbpteam.epfl.ch/repository/devpi/simple  hbp-nrp-virtual-coach==2.1.1"
    ]
   },
   {
