Exercise 2: download robot_positions.csv from the Collab Storage (a default file is provided)

--- a/notebooks/exercise2.ipynb
+++ b/notebooks/exercise2.ipynb
@@ -12,9 +12,24 @@
    "metadata": {},
    "source": [
     "The goal of this exercise is to generate a Self Organizing Map based on the recorded robot positions of Exercise 1.\n",
-    "If you didn't complete Exercise 1, clone and launch the experiment *Exercise 2: Transform robot positions ... (SOM)* of the [Neurorobotics platform](http://148.187.97.48/#/esv-private) to generate the file *robot_positions.csv* \n",
+    "\n",
+    "If you didn't complete Exercise 1, you can clone and launch the experiment *\"Exercise 2: Transform robot positions ... (SOM)\"* of the [Neurorobotics platform](http://148.187.97.48/#/esv-private) to generate the file *robot_positions.csv* and copy it this Collab's Storage.\n",
     "\n",
     "**Note that Exercise 2's experiment contains the solution of Exercise 1.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download the file robot_positions.csv file from this Collab's Storage\n",
+    "# If you didn't upload the file obtained in Exercise 1, a default robot_positions.csv file is provided\n",
+    "! pip install --upgrade \"hbp-service-client==1.1.1\"\n",
+    "clients = get_hbp_service_client()\n",
+    "collab_path = get_collab_storage_path()\n",
+    "clients.storage.download_file(collab_path + '/robot_positions.csv', './robot_positions.csv')"
    ]
   },
   {
