Adds thumbnails for the MOOC initialization app AND put notebooks in the MOOC initialization foder

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -41,19 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: [2019-03-01 16:28:53,948 - rospy.topics] topicmanager initialized\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: [2019-03-01 16:28:54,083 - Configuration] Loading configuration file config.json\n",
+      "INFO: [2019-03-01 16:28:54,084 - Configuration] Using user specified environment: dev\n",
+      "INFO: [2019-03-01 16:28:54,085 - VirtualCoach] Logging into OIDC as: lguyot\n",
+      "INFO: [2019-03-01 16:28:54,299 - VirtualCoach] Ready.\n"
+     ]
+    }
+   ],
    "source": [
     "from hbp_nrp_virtual_coach.virtual_coach import VirtualCoach\n",
     "\n",
     "# Initialize the Virtual Coach\n",
     "\"\"\" ----- TO DO -----\"\"\"\n",
-    "username = '<your-hbp-account-username>'\n",
+    "username = 'lguyot'\n",
     "\"\"\" ----- TO DO -----\"\"\"\n",
     "\n",
     "# Fill in your password when prompted\n",
-    "vc = VirtualCoach(environment='staging', oidc_username=username)"
+    "vc = VirtualCoach(environment='dev', oidc_username=username)"
    ]
   },
   {
@@ -72,9 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: [2019-03-01 16:28:58,185 - VirtualCoach] Retrieving list of experiments.\n",
+      "+-------------+\n",
+      "|    Name     |\n",
+      "+=============+\n",
+      "| Exercise1_0 |\n",
+      "+-------------+\n"
+     ]
+    }
+   ],
    "source": [
     "# The following command will display the list of experiments located in your storage\n",
     "# Check that 'Exercise1_0' (possibly Exercise1_i if you made i + 1 copies) is one of them.\n",
@@ -83,12 +114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: [2019-03-01 16:28:59,017 - VirtualCoach] Preparing to launch Exercise1_0.\n",
+      "INFO: [2019-03-01 16:28:59,018 - VirtualCoach] Retrieving list of experiments.\n",
+      "INFO: [2019-03-01 16:28:59,165 - VirtualCoach] Retrieving list of available servers.\n",
+      "INFO: [2019-03-01 16:28:59,209 - VirtualCoach] Checking server availability for: 148.187.96.212-port-443\n",
+      "INFO: [2019-03-01 16:28:59,210 - Simulation] Attempting to launch Exercise1_0 on 148.187.96.212-port-443.\n",
+      "URL: http://148.187.96.212:443/simulation\n",
+      "INFO: [2019-03-01 16:29:19,307 - Simulation (Exercise1_0 - 148.187.96.212-port-443 #4)] Simulation Successfully Created.\n",
+      "INFO: [2019-03-01 16:29:19,373 - Simulation (Exercise1_0 - 148.187.96.212-port-443 #4)] Ready.\n"
+     ]
+    }
+   ],
    "source": [
     "# Launch Exercise 1's experiment\n",
-    "sim = vc.launch_experiment('Exercise1_0')"
+    "sim = vc.launch_experiment('Exercise1_0', server='148.187.96.212-port-443')"
    ]
   },
   {
@@ -136,9 +182,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: [2019-03-01 16:29:19,381 - VirtualCoach] Preparing to launch Exercise1_0.\n",
+      "INFO: [2019-03-01 16:29:19,382 - VirtualCoach] Retrieving list of experiments.\n",
+      "INFO: [2019-03-01 16:29:19,770 - VirtualCoach] Retrieving list of available servers.\n",
+      "INFO: [2019-03-01 16:29:19,781 - Simulation] Attempting to launch Exercise1_0 on 148.187.96.212-port-443.\n",
+      "URL: http://148.187.96.212:443/simulation\n",
+      "ERROR: [2019-03-01 16:29:19,800 - bbp_client.oidc.client] Failed to retrieve data: {\"data\": null, \"message\": \"Another simulation is already running on the server.\", \"type\": \"Client error\"}\n",
+      "ERROR: [2019-03-01 16:29:19,801 - Simulation] Unable to launch on 148.187.96.212-port-443: HTTP Error 409: Invalid response 409.\n",
+      "INFO: [2019-03-01 16:29:19,802 - Simulation] Attempting to launch Exercise1_0 on 148.187.96.212-port-80.\n",
+      "URL: http://148.187.96.212:80/simulation\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/lguyot/Documents/NRP/VirtualCoach/hbp_nrp_virtual_coach/hbp_nrp_virtual_coach/simulation.py\", line 118, in launch\n",
+      "    status_code, sim_json = self.__http_client.post(url, sim_info)\n",
+      "  File \"/home/lguyot/Documents/NRP/VirtualCoach/hbp_nrp_virtual_coach/hbp_nrp_virtual_coach/oidc_http_client.py\", line 36, in post\n",
+      "    url, method='POST', body=json.dumps(body), headers=self.__headers\n",
+      "  File \"/home/lguyot/.opt/platform_venv/lib/python2.7/site-packages/bbp_client/oidc/client.py\", line 411, in request\n",
+      "    _verify_request(uri, resp.status, content)\n",
+      "  File \"/home/lguyot/.opt/platform_venv/lib/python2.7/site-packages/bbp_client/oidc/client.py\", line 472, in _verify_request\n",
+      "    raise HTTPError(uri, status, error_msg, None, None)\n",
+      "HTTPError: HTTP Error 409: Invalid response 409.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: [2019-03-01 16:29:28,947 - bbp_client.oidc.client] Failed to retrieve data: {\"message\": \"Internal server error: unsupported type for timedelta seconds component: Timeout\", \"type\": \"General error\"}\n",
+      "ERROR: [2019-03-01 16:29:28,948 - Simulation] Unable to launch on 148.187.96.212-port-80: HTTP Error 500: Invalid response 500.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/lguyot/Documents/NRP/VirtualCoach/hbp_nrp_virtual_coach/hbp_nrp_virtual_coach/simulation.py\", line 118, in launch\n",
+      "    status_code, sim_json = self.__http_client.post(url, sim_info)\n",
+      "  File \"/home/lguyot/Documents/NRP/VirtualCoach/hbp_nrp_virtual_coach/hbp_nrp_virtual_coach/oidc_http_client.py\", line 36, in post\n",
+      "    url, method='POST', body=json.dumps(body), headers=self.__headers\n",
+      "  File \"/home/lguyot/.opt/platform_venv/lib/python2.7/site-packages/bbp_client/oidc/client.py\", line 411, in request\n",
+      "    _verify_request(uri, resp.status, content)\n",
+      "  File \"/home/lguyot/.opt/platform_venv/lib/python2.7/site-packages/bbp_client/oidc/client.py\", line 472, in _verify_request\n",
+      "    raise HTTPError(uri, status, error_msg, None, None)\n",
+      "HTTPError: HTTP Error 500: Invalid response 500.\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Simulation launch failed, consult the logs or try again later.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-59c644267ca0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Launch Exercise 1's experiment for a sufficiently long time so as to collect robot positions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaunch_experiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Exercise1_0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\"\"\" ----- TO DO -----\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Choose the simulation duration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/lguyot/Documents/NRP/VirtualCoach/hbp_nrp_virtual_coach/hbp_nrp_virtual_coach/virtual_coach.pyc\u001b[0m in \u001b[0;36mlaunch_experiment\u001b[0;34m(self, experiment_id, server, reservation, cloned)\u001b[0m\n\u001b[1;32m    294\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m         \u001b[0;31m# simulation launch unsuccessful, abort\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Simulation launch failed, consult the logs or try again later.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclone_experiment_to_storage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: Simulation launch failed, consult the logs or try again later."
+     ]
+    }
+   ],
    "source": [
     "# Launch Exercise 1's experiment for a sufficiently long time so as to collect robot positions\n",
     "sim = vc.launch_experiment('Exercise1_0')\n",
@@ -188,8 +302,7 @@
     "import numpy as np\n",
     "from StringIO import StringIO\n",
     "\n",
-    "csv_text = '\\n'.join(','.join(line) for line in csv_content)\n",
-    "states = pd.read_csv(StringIO(csv_text), delimiter=',',header=0).values\n",
+    "states = pd.read_csv(StringIO(csv_content), delimiter=',',header=0).values\n",
     "positions = np.array([pd.to_numeric(states[:,0], errors='coerce'), pd.to_numeric(states[:,1], errors='coerce')]).T"
    ]
   },
