Fixes a typo in the cell that download the files containing the robot postions

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -306,7 +306,7 @@
     "# Remove the previous file with recorded positions (if it exists)\n",
     "from os import path\n",
     "filepath = path.join(collab_path, filename)\n",
-    "if(clients.storage.exists(filepath): \n",
+    "if clients.storage.exists(filepath): \n",
     "    clients.storage.delete(filepath)\n",
     "# Upload a file with the latest recorded robot positions\n",
     "data = clients.storage.upload_file(filename, filepath, 'text/csv')"
