Review of Exercise 2's Jupyter notebook

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -188,7 +188,7 @@
     "--------------------------------------\n",
     "__B.4.__ Launch <font color=black>__*Exercise 1_i*__</font> 's  experiment. \n",
     "\n",
-    "__Remark:__ copy from the list just above."
+    "__Remark:__ copy from the list above."
    ]
   },
   {
